tests/unit/data/apps/kustomize-app/overlays/production/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-application
  namespace: default
  annotations:
    ingressType: admin
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.id/force-ssl-redirect: "true"
    ingress.kubernetes.io/proxy-redirect-from: ~*^(?!http:|https:)(/application/?)?(.*)$
    ingress.kubernetes.io/proxy-redirect-to: /application/$2
spec:
  tls:
    - hosts:
        - local
      secretName: tls
  rules:
    - host: local
      http:
        paths:
          - path: /application
            pathType: ImplementationSpecific
            backend:
              service:
                name: application
                port:
                  name: http
